Integrate (#24)
* Util dir with raspberry communication

* segregated benchmark runners into folder and added / moved utils scripts

* Added arguments for debugging in run script

* Description of arguments in readme

* Removed old code

* Update README.md

Co-authored-by: Jakob <31919330+Jakobzs@users.noreply.github.com>

* Update utils/append_to_latest_csv.sh

Co-authored-by: Jakob <31919330+Jakobzs@users.noreply.github.com>

* Dotnet run

* Added some description and error handling in regard to arguments (+ tabs)

* Added python to run script

* removed echo

---------

Co-authored-by: Simon <sabj17@student.aau.dk>
Co-authored-by: Jakob <31919330+Jakobzs@users.noreply.github.com>