@@ -1,51 +1,76 @@
-append_to_latest_csv () {
-    #finding latest csv file
-    FILE=$(ls -t | grep csv | head -1)
-    # append string to name
-    timestamp=$(date +%s)
-    echo $FILE
-    mv $FILE "results/${FILE%.csv}_$1_$timestamp.csv"
-    
-}
+#!/bin/bash
 
-# stopping services
-bash kill_and_burn.sh 0
+# first argument is for stopping the logging from raspberry
+# secound argument is for stopping the kill and burn script
+# both arguments are strings and are set to "true" by default,
+arg1=${1:-'true'}
+arg2=${2:-'true'}
+# set them to false stop the given feature.
 
-echo "starting"
+# checking for invalid input
+if ([ $arg1 != 'true' ] && [ $arg1 != 'false' ]) || ([ $arg2 != 'true' ] && [ $arg2 != 'false' ])
+then
+	echo "invalid input given, 'true' or 'false'"
+	exit
+fi
 
+##########################
+##### Pre Benchmarks #####
+##########################
+
+if [ $arg1 != 'false' ]
+then
+	#Send start signal to Raspberry PI - await confirmation from raspberry?
+	echo "starting logger"
+	bash utils/raspberry_logger.sh 1
+	sleep 10s
+fi
+
+if [ $arg2 != 'false' ]
+then
+	# Stop services and background processes
+	bash utils/kill_and_burn.sh 0
+fi
+
+##########################
+##### Run Benchmarks #####
+##########################
+echo "Starting benchmarks"
+
+# Create dir for results
 mkdir results
-# -- fib --
 
-fibInput=20000
-count=1000
+# Running all benchmarks
+for f in benchRunners/*.sh; do
+	bash "$f"
+done
 
-echo "starting fib"
+###########################
+##### Post Benchmarks #####
+###########################
 
-
-#   Node
-node ./benchmarks/FibSequence/bench.js $fibInput $count
-sleep 5s
-append_to_latest_csv "NodeFib"
-
-#   Pypy
-pypy ./benchmarks/FibSequence/bench.py $fibInput $count
-sleep 5s
-append_to_latest_csv "PypyFib"
-
-#   C#
-# building
-dotnet build ./benchmarks/FibSequence/benchC#  --configuration Release
-
-# running
-./benchmarks/FibSequence/benchC#/bin/Debug/net7.0/Fib $fibInput $count
-sleep 5s
-append_to_latest_csv "CsharpFib" 
-
-#   Java
-java --enable-native-access=ALL-UNNAMED --enable-preview --source 21 ./benchmarks/FibSequence/fibjava/Bench.java $fibInput $count
-sleep 5s
-append_to_latest_csv "JavaFib"
+if [ $arg2 != 'false' ]
+then
+	# starting services
+	bash utils/kill_and_burn.sh 1
 
 
-# starting services
-bash kill_and_burn.sh 1
+	# waiting for services to start
+	echo "waiting 10 secounds for services to start"
+	sleep 10s
+fi
+
+if [ $arg1 != 'false' ]
+then
+	# Send stop signal to Raspberry PI
+	bash utils/raspberry_logger.sh 0
+fi
+
+
+if [ $arg2 != 'false' ]
+then
+	# Send results data to Raspberry PI
+	bash utils/send_results.sh
+fi
+
+
